--- a/src/Interfaz/ASInicio.form
+++ b/src/Interfaz/ASInicio.form
@@ -169,18 +169,18 @@
                                       </Group>
                                   </Group>
                               </Group>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Component id="jBComprasFecha" min="-2" pref="215" max="-2" attributes="0"/>
-                                  <EmptySpace max="32767" attributes="0"/>
-                                  <Component id="jPropinasChef" min="-2" pref="215" max="-2" attributes="0"/>
-                              </Group>
                               <Group type="102" attributes="0">
                                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                                  <Component id="jPlatoMenosVendido" min="-2" pref="215" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
-                                  <Component id="jComprasporFecha" min="-2" pref="215" max="-2" attributes="0"/>
-                                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                                  <Component id="jPropinasCam" min="-2" pref="215" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="1" attributes="0">
+                                      <Component id="jPropinasChef" alignment="1" min="-2" pref="215" max="-2" attributes="0"/>
+                                      <Group type="102" attributes="0">
+                                          <Component id="jPlatoMenosVendido" min="-2" pref="215" max="-2" attributes="0"/>
+                                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                                          <Component id="jBComprasFecha" min="-2" pref="215" max="-2" attributes="0"/>
+                                          <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
+                                          <Component id="jPropinasCam" min="-2" pref="215" max="-2" attributes="0"/>
+                                      </Group>
+                                  </Group>
                               </Group>
                           </Group>
                           <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
@@ -233,14 +233,11 @@
                   <EmptySpace pref="15" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jPlatoMenosVendido" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
-                      <Component id="jComprasporFecha" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
                       <Component id="jPropinasCam" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
+                      <Component id="jBComprasFecha" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jBComprasFecha" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
-                      <Component id="jPropinasChef" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="jPropinasChef" min="-2" pref="46" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -424,23 +421,6 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Estad&#xed;sticas"/>
           </Properties>
-        </Component>
-        <Component class="javax.swing.JButton" name="jComprasporFecha">
-          <Properties>
-            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="66" green="66" red="0" type="rgb"/>
-            </Property>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Microsoft YaHei UI" size="14" style="0"/>
-            </Property>
-            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="ff" green="ff" red="ff" type="rgb"/>
-            </Property>
-            <Property name="text" type="java.lang.String" value="Compras por fecha"/>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jComprasporFechaActionPerformed"/>
-          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jAdminGral3">
           <Properties>
